--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <nav>
                 <div class="container">
-                    <ul class="left">
+                    <ul id="susa" class="left">
                         <li class="logo z-depth-2 btn-border-slide">
                             <a href="/">
                                 <span>
