--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta charset="UTF-8"/>
         <title>Easy Password</title>
 
-        <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/png"/>
+        <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/png">
 
         <!--Let browser know website is optimized for mobile-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
 
-        <link href="/static/css/style.css?version=7" rel="stylesheet"/>
+        <link href="/static/css/style.css?version=7" rel="stylesheet">
     </head>
     <body>
         <header>
