--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="ru" data-theme="light">
     <head>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8">
         <title>Easy Password</title>
 
         <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/png">
